--- a/de/seemodo/api-reference.mdx
+++ b/de/seemodo/api-reference.mdx
@@ -113,7 +113,7 @@ POST /api/apply-ai-code-stream
 ### Edit Screen
 
 <ParamField path="/api/edit-screen" method="POST">
-  Bestehenden Screen mit Morph-Integration bearbeiten.
+  Bestehenden Screen mit KI bearbeiten.
 </ParamField>
 
 ```typescript
