--- a/de/seemodo/introduction.mdx
+++ b/de/seemodo/introduction.mdx
@@ -18,7 +18,7 @@ Seemodo ist ein KI-Coding-Assistent, der deine Ideen in funktionierende Anwendun
     Nutze den Canvas-basierten Designer um Screens visuell mit tldraw zu erstellen.
   </Card>
   <Card title="Website-Klonen" icon="clone">
-    Klone jedes Website-Design sofort mit Firecrawl-Integration.
+    Klone jedes Website-Design sofort.
   </Card>
   <Card title="KI-Chat-Editor" icon="comments">
     Verfeinere deine App iterativ durch natürlichsprachliche Konversation.
