--- a/seemodo/api-reference.mdx
+++ b/seemodo/api-reference.mdx
@@ -113,7 +113,7 @@ POST /api/apply-ai-code-stream
 ### Edit Screen
 
 <ParamField path="/api/edit-screen" method="POST">
-  Edit existing screen with Morph integration.
+  Edit existing screen with AI.
 </ParamField>
 
 ```typescript
@@ -394,7 +394,7 @@ GET /api/supabase-proxy/projects/abcdef/database/tables
 ### Scrape Website
 
 <ParamField path="/api/scrape-website" method="POST">
-  Scrape a URL with Firecrawl.
+  Scrape a URL for cloning.
 </ParamField>
 
 ```typescript
