--- a/seemodo/introduction.mdx
+++ b/seemodo/introduction.mdx
@@ -18,7 +18,7 @@ Seemodo is an AI coding assistant that transforms your ideas into working applic
     Use the canvas-based designer to create screens visually with tldraw.
   </Card>
   <Card title="Website Cloning" icon="clone">
-    Clone any website's design instantly with Firecrawl integration.
+    Clone any website's design instantly.
   </Card>
   <Card title="AI Chat Editor" icon="comments">
     Iteratively refine your app through natural language conversation.
